--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,31 @@
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  margin: -75px 0 0 -75px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #130606;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  background-color: white;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .App{
   display: flex;
 }
@@ -221,15 +249,15 @@ scrollbar-width: none;  /* Firefox */
 }
 
 .likes{
-  font-size: 30px;
+  font-size: 20px;
   margin-top: 20px;
   border-top: 1px solid rgba(206, 209, 201, 0.644);
   padding: 10px;
 }
 
 .likes > img{
-  vertical-align: text-bottom;
-  padding: 1px 10px;
+  vertical-align: middle;
+  padding: 0px 10px;
 }
 .tweetTime{
   font-weight: bold;
