--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   100% { transform: rotate(360deg); }
 }
 
-@media screen and (max-width:820px)
+@media screen and (max-width:768px)
 {
   .dashboard{
     display: block !important;
@@ -42,6 +42,30 @@
   }
   .mainArea{
     overflow-x: hidden !important;
+  }
+
+  .headerContent,.user,.tweetContent,.editbtn,.mainArea,.likes,.sidebarOptions, span,.profileEmail,.profileName,.profileUsername,.bio,.follow{
+    font-size: 13px !important;
+  }
+  .deletebtn,.smallbtn,.smallbtn2,.sidebarOptions,.sidebarOptions,.rightSidebar,.login,.signup{
+    font-size: 12px !important;
+  }
+
+  .header{
+    height: 5vmin !important;
+  }
+
+  .profilePicProfile{
+    height: 100px !important;
+    width: 100px !important;
+  }
+
+  .editbtn{
+    margin-top: 50px !important;
+  }
+
+  .sidebarOptions,.sidebar,.login,.signup{
+    padding: 4px !important;
   }
 }
 
@@ -180,7 +204,7 @@
 }
 
 .sidebar{
-  flex-basis: 15%;
+  flex-basis: 20%;
   background-color: #a7b4b0;
   height: 100vh;
   overflow-y: auto;
@@ -188,9 +212,10 @@
   padding:10px;
 }
 .mainArea{
-  flex-basis: 70%;
+  flex-basis: 60%;
   height: 100vh;
   overflow-y: auto;
+  overflow-x:hidden;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
@@ -205,7 +230,7 @@ scrollbar-width: none;  /* Firefox */
 }
 
 .rightSidebar{
-  flex-basis: 15%;
+  flex-basis: 20%;
   background-color: #a7b4b0;
   height: 100vh;
   overflow-y: auto;
@@ -439,7 +464,7 @@ scrollbar-width: none;  /* Firefox */
 
 .bioInput{
   margin: 30px auto;
-  width: fit-content;
+  width: 50%;
   font-size: 18px;
   font-weight: 600;
   color: #a6b4b0;
@@ -496,12 +521,9 @@ scrollbar-width: none;  /* Firefox */
 
 .tweetPostImage{
   height: 400px;
-    width: 400px;
+    width: 100%;
     display: block;
     margin: auto;
-    border: 1px solid #1a3e33;
-    padding: 10px;
-    border-radius: 20px;
 }
 
 .mainTweet{
