added apis intg to older ones

--- a/src/App.css
+++ b/src/App.css
@@ -234,8 +234,8 @@
 }
 .headerContent{
   padding: 10px 108px;
-    font-size: 30px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 600;
     color: rgb(8 62 99);
     font-family: Avenir-Medium;
     width: 440px;
@@ -321,14 +321,13 @@ scrollbar-width: none;  /* Firefox */
   background: #FFF;
   border: 1px solid;
   border-radius: 20px;
-  padding: 7px;
+  padding: 6px 0px;
 }
 
 .aboveTweet{
   display: flex;
-  background-color: rgba(250, 250, 250, 0.863);
-  padding: 10px;
-  border-top: 1px solid #a6b4b04f;
+  padding: 10px 20px;
+
 }
 .user{
   flex:1;
@@ -344,7 +343,7 @@ scrollbar-width: none;  /* Firefox */
 
 .tweetContent{
   padding: 20px;
-  font-size: 25px;
+  font-size: 22px;
   margin-top: 30px;
   margin-bottom: 50px;
 }
@@ -381,18 +380,30 @@ scrollbar-width: none;  /* Firefox */
 
 .smallbtn2{
   display: block;
-  padding: 8px;
+  padding: 8px 20px;
   border: 1px solid;
   border-radius: 25px;
-  width: 14vmin;
-  margin: auto;
+  margin: 0px 20px;
   margin-top: 23px;
   cursor: pointer;
   background-color: #0a66c2;
   color: white;
   outline: none;
-  font-size: 15px;
+  font-size: 16px;
   float: left;
+  margin-right: 100px;
+}
+
+.multibtn{
+  height: 30px;
+    width: 30px;
+    display: inline;
+    margin-left: 100px;
+    cursor: pointer;
+}
+
+.multibtn:hover {
+  transform: scale(1.2);
 }
 
 .smallbtn2:hover{
@@ -413,29 +424,22 @@ scrollbar-width: none;  /* Firefox */
 }
 
 .deletebtn{
-  padding: 5px;
-  border: 1px solid;
-  border-radius: 25px;
-  width: 8vmin;
-  margin: auto;
+  margin: 7px auto;
   cursor: pointer;
-  background-color: #0a66c2;
-  color: white;
+  color: #073f63;
   outline: none;
   font-size: 14px;
   text-align: center;
-  float: right;
+  padding: 7px 12px;
 }
 
 .deletebtn:hover{
-  background-color: #a6b4b0;
-  color:#000;
+  background-color: #c7d9f0;
 }
 
 .tweetbox{
   border-bottom: 23px solid rgb(30 162 241 / 4%);
   padding: 20px;
-  display: flex;
   background: #FFF;
   border-radius: 20px;
   margin-top: 12px;
@@ -581,16 +585,97 @@ scrollbar-width: none;  /* Firefox */
 }
 
 .tweetPostImage{
-  height: 400px;
-  width: 400px;
+  width: -webkit-fill-available;
   display: block;
   margin: auto;
-  border: 1px solid #064063;
-  border-radius: 15px;
+}
+
+.videoDiv{
+    width: -webkit-fill-available;
+    display: block;
+    margin: auto;
+    border: 1px solid #0a66c2;
+    outline: none;
+    object-fit: fill;
+}
+
+.profileDiv{
+  background: #FFF;
+  padding: 10px 0px;
+  margin-top: 20px;
+  border-radius: 20px;
+  padding-bottom: 30px;
+}
+
+.dropbtn {
+    color: #272727;
+    font-size: 22px;
+    cursor: pointer;
+    background: #FFF;
+    border: none;
+    width: 24px;
+    position: relative;
+    bottom: 12px;
+    left: 3px;
+    outline:none;
+    font-weight: bolder;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  transform: scale(1.2);
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  position: absolute;
+    background-color: #f1f1f1;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1000;
+    right: -15px;
+    top: 24px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: relative;
+  width: auto;
+  padding: 16px;
+  color: #1ea2f1;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  -webkit-user-select: none;
+  user-select: none;
+  bottom: 0;
+  top: 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  left : 450px;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
 }
 
 .mainTweet{
-  padding: 5px;
+  padding: 5px 0px;
 }
 
 .editTweetcontent{
@@ -601,7 +686,7 @@ scrollbar-width: none;  /* Firefox */
     margin-bottom: 50px;
     border: none;
     outline: none;
-    width: 100%;
+    width: 450px;
 }
 
 .tweetboxform{
